# proyecto-final-automation-testing-gerardo-toboso

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
src/data/: checkout.csv
src/pages/: catalog_page.py  checkout_page.py  login_page.py  shopping_cart_page.py
src/tests/: conftest.py  test_catalog.py  test_checkout.py  test_json_placeholder.py  test_login.py  test_post_lifecycle.py  test_shopping_cart.py
src/utils/: api_utils.py  csv_reader.py  file_reader.py  json_reader.py  logger.py  screenshot_saver.py
